dns/dnscryptproxy: Add status field type
Adding a first try at a status field.
Uses a custom FieldType, model definition, and form definitions.
New field partial as well.
Staritng to break out the fields into separate files as well.

--- a/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/about.xml
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/about.xml
@@ -10,7 +10,16 @@
         <type>info</type>
     </field>
     <field>
-        <label>Resolve Hostname</label>
+        <id>status</id>
+        <label>dnscrypt-proxy status</label>
+        <type>status</type>
+        <!-- <style>label-info</style> -->
+        <labels>
+            <success>clean </success>
+            <danger>dirty</danger>
+        </labels>
+    </field>
+    <field>
         <type>span_content</type>
         <content><![CDATA[
             <div class="col-md-12">
