dns/dnscrypt-proxy: Add some new stuff for commandsWithInfo
* Add infoAction() for API endpoint.
* Add info api specification for testing.
* Accommodate info API in macros.
* Some other updates for commandsWithInfo and some other stuff in the volt

--- a/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
+++ b/dns/dnscrypt-proxy-ng/src/opnsense/mvc/app/controllers/OPNsense/Dnscryptproxy/forms/settings.xml
@@ -922,6 +922,7 @@
                     <set>/api/dnscryptproxy/settings/bootgrid/set</set>
                     <add>/api/dnscryptproxy/settings/bootgrid/add</add>
                     <del>/api/dnscryptproxy/settings/bootgrid/del</del>
+                    <info>/api/dnscryptproxy/settings/info</info>
                     <toggle>/api/dnscryptproxy/settings/bootgrid/toggle</toggle>
                     <import>/api/dnscryptproxy/settings/importgrid</import>
                     <export>/api/dnscryptproxy/settings/exportgrid</export>
